packages/kyvernoPolicies/chart/tests/vpol/restrict-host-path-mount-pv-cel/chainsaw-test/pv-good.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: chainsaw-restrict-host-path-mount-pv-good
spec:
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  storageClassName: chainsaw
  hostPath:
    path: /tmp/allowed
